# SimpleParserAndAST

./: .editorconfig  CMakeLists.txt  README.md
src/: AST.h  Lexer.h  main.cpp  testcase.txt
